# internal/api/v1/handlers/otp/types.go
@@ -1,6 +1,8 @@
 package otp
 
-import "authy-api/internal/database"
+import (
+	"authy-api/internal/database"
+)
 
 // GenerateOTPRequest represents the request body for generating an OTP
 type GenerateOTPRequest struct {
@@ -13,6 +15,19 @@ type GenerateOTPRequest struct {
 type GenerateOTPResponse struct {
 	Message   string `json:"message" example:"OTP sent successfully"`
 	ExpiresAt string `json:"expires_at" example:"2026-02-19T20:30:00Z"`
+}
+
+// VerifyOTPRequest represents the request body for verifying an OTP
+type VerifyOTPRequest struct {
+	Identifier string `json:"identifier" example:"237123456780" validate:"required"`
+	Platform   string `json:"platform" example:"wa" validate:"required"`
+	Sender     string `json:"sender" example:"237123456789" validate:"required"`
+	Code       string `json:"code" example:"123456" validate:"required"`
+}
+
+// VerifyOTPResponse represents the response after verifying an OTP
+type VerifyOTPResponse struct {
+	Message string `json:"message" example:"OTP verified successfully"`
 }
 
 // ErrorResponse represents an error response
